@@ -1,3 +1,8 @@
+2010-09-28  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (plot_image_or_update_axes): Add support for log-scale
+	transformation of 2D image data.
+
 2010-09-28  Volker Dobler  <vdobler@users.sourceforge.net>
 
 	* src/axis.c (load_one_range load_range) src/axis.h
